[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astromatch"
version = "1.0.0"
authors = [
  { name="Shyam Bhat", email="bhatshyam.modernastrologer@gmail.com" },
]
description = "This package takes the bride and groom birth details and generates the gunamilan and matchmaking between them by checking astrological compatibility between them."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VicharaVandana/jyotichart"
"Bug Tracker" = "https://github.com/VicharaVandana/jyotichart/issues"